fix bug screen overflow

--- a/src/input.css
+++ b/src/input.css
@@ -40,7 +40,7 @@
     @apply inline-block cursor-pointer;
   }
   .hamburger .bar-1, .hamburger .bar-2, .hamburger .bar-3 {
-    @apply w-9 h-1 bg-primary my-1 mx-0 transition-all rounded-full;
+    @apply w-6 h-1 bg-primary my-1 mx-0 transition-all rounded-full;
   }
   .hamburger.active .bar-1 {
     @apply translate-y-2 -rotate-45;
@@ -52,6 +52,6 @@
     @apply -translate-y-2 rotate-45;
   }
   .dropdown {
-    @apply flex after:content-[url('../assets/img/icons/CaretDown.svg')] after:pl-1.5;
+    @apply relative after:absolute after:top-1/2 after:-right-[10px] after:-translate-y-1/2 flex after:content-[url('../assets/img/icons/CaretDown.svg')] after:pl-1.5;
   }
 }
